# openapi-spec-models

./: README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
src/openapi_spec_models/: __init__.py  plugins.py  utils.py
src/openapi_spec_models/spec/: header.py  open_api.py  schema.py
tests/: __init__.py  test_imports.py  test_plugins.py
