[project]
name = "openapi-spec-models"
version = "0.1.1"
description = "Framework-agnostic OpenAPI 3.0 specification models and render plugins"
readme = "README.md"
authors = [
    { name = "Tobi", email = "tobidegnon@proton.me" }
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0.0",
]
license = { text = "MIT" }
keywords = ["openapi", "openapi3", "swagger", "api", "documentation", "spec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/yourusername/openapi-spec-models"
Repository = "https://github.com/yourusername/openapi-spec-models"
Issues = "https://github.com/yourusername/openapi-spec-models/issues"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
